feat(authentication): support to reset password
