# docs/swagger.json
@@ -16,6 +16,52 @@
     "host": "localhost:8000",
     "basePath": "/api",
     "paths": {
+        "/auth/forgot-password": {
+            "post": {
+                "description": "Forgot Password",
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Forgot Password",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Email",
+                        "name": "email",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/auth/google": {
+            "get": {
+                "description": "Google GoogleOAuth",
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Google GoogleOAuth",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization Code",
+                        "name": "code",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
         "/auth/login": {
             "post": {
                 "description": "Login User",
@@ -118,6 +164,43 @@
                     }
                 ],
                 "responses": {}
+            }
+        },
+        "/auth/reset-password/{resetToken}": {
+            "patch": {
+                "description": "Reset Password",
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Reset Password",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Reset Token",
+                        "name": "resetToken",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Password",
+                        "name": "password",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Password Confirm",
+                        "name": "passwordConfirm",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
             }
         },
         "/auth/verify-email": {
@@ -265,6 +348,9 @@
                 },
                 "role": {
                     "type": "string"
+                },
+                "verified": {
+                    "type": "boolean"
                 }
             }
         }
