# models/user.model.go
@@ -1,6 +1,8 @@
 package models
 
 import (
+	"time"
+
 	"github.com/go-playground/validator/v10"
 	"github.com/google/uuid"
 	"gorm.io/gorm"
@@ -8,15 +10,17 @@ import (
 
 type User struct {
 	gorm.Model
-	ID               uuid.UUID `json:"ID,omitempty" gorm:"type:uuid;primary_key;default:uuid_generate_v4()"`
-	Name             string    `json:"Name,omitempty" gorm:"type:varchar(255);not null"`
-	Email            string    `json:"Email,omitempty" gorm:"type:varchar(255);not null;unique;" validate:"email,required"`
-	Password         string    `json:"Password,omitempty" gorm:"type:varchar(255);not null;" validate:"required,min=8,max=32"`
-	Role             string    `json:"Role,omitempty" gorm:"type:varchar(255);not null;default:'user'"`
-	Provider         string    `json:"Provider,omitempty" gorm:"type:varchar(255);not null;default:'local'"`
-	Photo            string    `json:"Photo,omitempty" gorm:"type:varchar(255);not null;default:'https://t4.ftcdn.net/jpg/05/49/98/39/360_F_549983970_bRCkYfk0P6PP5fKbMhZMIb07mCJ6esXL.jpg'"`
-	VerificationCode string
-	Verified         bool `json:"Verified,omitempty" gorm:"type:boolean;not null;default:false"`
+	ID                 uuid.UUID `json:"ID,omitempty" gorm:"type:uuid;primary_key;default:uuid_generate_v4()"`
+	Name               string    `json:"Name,omitempty" gorm:"type:varchar(255);not null"`
+	Email              string    `json:"Email,omitempty" gorm:"type:varchar(255);not null;unique;" validate:"email,required"`
+	Password           string    `json:"Password,omitempty" gorm:"type:varchar(255);not null;" validate:"required,min=8,max=32"`
+	Role               string    `json:"Role,omitempty" gorm:"type:varchar(255);not null;default:'user'"`
+	Provider           string    `json:"Provider,omitempty" gorm:"type:varchar(255);not null;default:'local'"`
+	Photo              string    `json:"Photo,omitempty" gorm:"type:varchar(255);not null;default:'https://t4.ftcdn.net/jpg/05/49/98/39/360_F_549983970_bRCkYfk0P6PP5fKbMhZMIb07mCJ6esXL.jpg'"`
+	VerificationCode   string
+	Verified           bool `json:"Verified,omitempty" gorm:"type:boolean;not null;default:false"`
+	PasswordResetToken string
+	PasswordResetAt    time.Time
 }
 
 var validate *validator.Validate = validator.New()
@@ -66,4 +70,13 @@ type UserResponse struct {
 	Photo    string    `json:"photo,omitempty"`
 	Provider string    `json:"provider,omitempty"`
 	Verified bool      `json:"verified,omitempty"`
+}
+
+type UserForgotPassword struct {
+	Email string `json:"email" validate:"required,email"`
+}
+
+type UserResetPassword struct {
+	Password        string `json:"password" validate:"required,min=8,max=32"`
+	PasswordConfirm string `json:"passwordConfirm" validate:"required,eqfield=Password"`
 }
